Ampliacion4/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : lista_definiciones FUNC MAIN '(' ')' '{' cuerpo '}'

   2  lista_definiciones :
   3                     | lista_definiciones definicion

   4  definicion : definicion_funcion
   5             | definicion_variable

   6  lista_expresiones :
   7                    | lista_expresionesP

   8  lista_expresionesP : expresion
   9                     | lista_expresionesP ',' expresion

  10  expresion : CTE_ENTERA
  11            | CTE_REAL
  12            | CTE_CARACTER
  13            | ID
  14            | '(' expresion ')'
  15            | expresion '.' ID
  16            | expresion '[' expresion ']'
  17            | '-' expresion
  18            | '!' expresion
  19            | expresion '*' expresion
  20            | expresion '/' expresion
  21            | expresion '%' expresion
  22            | expresion '+' expresion
  23            | expresion '-' expresion
  24            | expresion '>' expresion
  25            | expresion MAYOR_IGUAL expresion
  26            | expresion '<' expresion
  27            | expresion MENOR_IGUAL expresion
  28            | expresion DISTINTO expresion
  29            | expresion IGUAL_IGUAL expresion
  30            | expresion AND expresion
  31            | expresion OR expresion
  32            | tipo '(' expresion ')'
  33            | ID '(' lista_expresiones ')'

  34  lista_sentencias :
  35                   | lista_sentencias sentencia

  36  sentencia : sentencia_if
  37            | sentencia_while
  38            | sentencia_write
  39            | sentencia_read
  40            | sentencia_asignacion
  41            | sentencia_return
  42            | sentencia_invocacion
  43            | sentencia_modificarValor
  44            | sentencia_modificarValorConcreto

  45  sentencia_asignacion : expresion '=' expresion ';'

  46  sentencia_if : IF expresion '{' lista_sentencias '}'
  47               | IF expresion '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'

  48  sentencia_while : WHILE expresion '{' lista_sentencias '}'

  49  sentencia_write : WRITE '(' lista_expresiones ')' ';'

  50  sentencia_read : READ '(' lista_expresiones ')' ';'

  51  sentencia_return : RETURN expresion ';'

  52  sentencia_invocacion : ID '(' lista_expresiones ')' ';'

  53  sentencia_modificarValor : expresion MAS_MAS ';'
  54                           | expresion MENOS_MENOS ';'

  55  sentencia_modificarValorConcreto : expresion MAS_IGUAL expresion ';'
  56                                   | expresion MENOS_IGUAL expresion ';'

  57  lista_variables :
  58                  | lista_variables definicion_variable

  59  definicion_variable : VAR identificadores tipo ';'

  60  identificadores : ID
  61                  | identificadores ',' ID

  62  campo : identificadores tipo ';'

  63  lista_campos : campo
  64               | lista_campos campo

  65  tipo : INT
  66       | FLOAT32
  67       | CHAR
  68       | '[' CTE_ENTERA ']' tipo
  69       | STRUCT '{' lista_campos '}'

  70  definicion_funcion : FUNC ID '(' lista_parametros ')' retorno '{' cuerpo '}'

  71  cuerpo : lista_variables lista_sentencias

  72  tipoSimple : INT
  73             | FLOAT32
  74             | CHAR

  75  retorno :
  76          | tipoSimple

  77  lista_parametros :
  78                   | lista_parametrosP

  79  lista_parametrosP : ID tipoSimple
  80                    | lista_parametrosP ',' ID tipoSimple

state 0
	$accept : . programa $end  (0)
	lista_definiciones : .  (2)

	.  reduce 2

	programa  goto 1
	lista_definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : lista_definiciones . FUNC MAIN '(' ')' '{' cuerpo '}'  (1)
	lista_definiciones : lista_definiciones . definicion  (3)

	FUNC  shift 3
	VAR  shift 4
	.  error

	definicion  goto 5
	definicion_funcion  goto 6
	definicion_variable  goto 7


state 3
	programa : lista_definiciones FUNC . MAIN '(' ')' '{' cuerpo '}'  (1)
	definicion_funcion : FUNC . ID '(' lista_parametros ')' retorno '{' cuerpo '}'  (70)

	MAIN  shift 8
	ID  shift 9
	.  error


state 4
	definicion_variable : VAR . identificadores tipo ';'  (59)

	ID  shift 10
	.  error

	identificadores  goto 11


state 5
	lista_definiciones : lista_definiciones definicion .  (3)

	.  reduce 3


state 6
	definicion : definicion_funcion .  (4)

	.  reduce 4


state 7
	definicion : definicion_variable .  (5)

	.  reduce 5


state 8
	programa : lista_definiciones FUNC MAIN . '(' ')' '{' cuerpo '}'  (1)

	'('  shift 12
	.  error


state 9
	definicion_funcion : FUNC ID . '(' lista_parametros ')' retorno '{' cuerpo '}'  (70)

	'('  shift 13
	.  error


state 10
	identificadores : ID .  (60)

	.  reduce 60


state 11
	definicion_variable : VAR identificadores . tipo ';'  (59)
	identificadores : identificadores . ',' ID  (61)

	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'['  shift 18
	','  shift 19
	.  error

	tipo  goto 20


state 12
	programa : lista_definiciones FUNC MAIN '(' . ')' '{' cuerpo '}'  (1)

	')'  shift 21
	.  error


state 13
	definicion_funcion : FUNC ID '(' . lista_parametros ')' retorno '{' cuerpo '}'  (70)
	lista_parametros : .  (77)

	ID  shift 22
	')'  reduce 77

	lista_parametros  goto 23
	lista_parametrosP  goto 24


state 14
	tipo : STRUCT . '{' lista_campos '}'  (69)

	'{'  shift 25
	.  error


state 15
	tipo : FLOAT32 .  (66)

	.  reduce 66


state 16
	tipo : INT .  (65)

	.  reduce 65


state 17
	tipo : CHAR .  (67)

	.  reduce 67


state 18
	tipo : '[' . CTE_ENTERA ']' tipo  (68)

	CTE_ENTERA  shift 26
	.  error


state 19
	identificadores : identificadores ',' . ID  (61)

	ID  shift 27
	.  error


state 20
	definicion_variable : VAR identificadores tipo . ';'  (59)

	';'  shift 28
	.  error


state 21
	programa : lista_definiciones FUNC MAIN '(' ')' . '{' cuerpo '}'  (1)

	'{'  shift 29
	.  error


state 22
	lista_parametrosP : ID . tipoSimple  (79)

	FLOAT32  shift 30
	INT  shift 31
	CHAR  shift 32
	.  error

	tipoSimple  goto 33


state 23
	definicion_funcion : FUNC ID '(' lista_parametros . ')' retorno '{' cuerpo '}'  (70)

	')'  shift 34
	.  error


state 24
	lista_parametros : lista_parametrosP .  (78)
	lista_parametrosP : lista_parametrosP . ',' ID tipoSimple  (80)

	','  shift 35
	')'  reduce 78


state 25
	tipo : STRUCT '{' . lista_campos '}'  (69)

	ID  shift 10
	.  error

	identificadores  goto 36
	campo  goto 37
	lista_campos  goto 38


state 26
	tipo : '[' CTE_ENTERA . ']' tipo  (68)

	']'  shift 39
	.  error


state 27
	identificadores : identificadores ',' ID .  (61)

	.  reduce 61


state 28
	definicion_variable : VAR identificadores tipo ';' .  (59)

	.  reduce 59


state 29
	programa : lista_definiciones FUNC MAIN '(' ')' '{' . cuerpo '}'  (1)
	lista_variables : .  (57)

	.  reduce 57

	cuerpo  goto 40
	lista_variables  goto 41


state 30
	tipoSimple : FLOAT32 .  (73)

	.  reduce 73


state 31
	tipoSimple : INT .  (72)

	.  reduce 72


state 32
	tipoSimple : CHAR .  (74)

	.  reduce 74


state 33
	lista_parametrosP : ID tipoSimple .  (79)

	.  reduce 79


state 34
	definicion_funcion : FUNC ID '(' lista_parametros ')' . retorno '{' cuerpo '}'  (70)
	retorno : .  (75)

	FLOAT32  shift 30
	INT  shift 31
	CHAR  shift 32
	'{'  reduce 75

	retorno  goto 42
	tipoSimple  goto 43


state 35
	lista_parametrosP : lista_parametrosP ',' . ID tipoSimple  (80)

	ID  shift 44
	.  error


state 36
	identificadores : identificadores . ',' ID  (61)
	campo : identificadores . tipo ';'  (62)

	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'['  shift 18
	','  shift 19
	.  error

	tipo  goto 45


state 37
	lista_campos : campo .  (63)

	.  reduce 63


state 38
	lista_campos : lista_campos . campo  (64)
	tipo : STRUCT '{' lista_campos . '}'  (69)

	ID  shift 10
	'}'  shift 46
	.  error

	identificadores  goto 36
	campo  goto 47


state 39
	tipo : '[' CTE_ENTERA ']' . tipo  (68)

	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'['  shift 18
	.  error

	tipo  goto 48


state 40
	programa : lista_definiciones FUNC MAIN '(' ')' '{' cuerpo . '}'  (1)

	'}'  shift 49
	.  error


state 41
	lista_variables : lista_variables . definicion_variable  (58)
	cuerpo : lista_variables . lista_sentencias  (71)
	lista_sentencias : .  (34)

	VAR  shift 4
	CTE_ENTERA  reduce 34
	IF  reduce 34
	CTE_CARACTER  reduce 34
	ID  reduce 34
	WRITE  reduce 34
	CTE_REAL  reduce 34
	STRUCT  reduce 34
	WHILE  reduce 34
	FLOAT32  reduce 34
	INT  reduce 34
	RETURN  reduce 34
	CHAR  reduce 34
	READ  reduce 34
	'-'  reduce 34
	'!'  reduce 34
	'['  reduce 34
	'('  reduce 34
	'}'  reduce 34

	definicion_variable  goto 50
	lista_sentencias  goto 51


state 42
	definicion_funcion : FUNC ID '(' lista_parametros ')' retorno . '{' cuerpo '}'  (70)

	'{'  shift 52
	.  error


state 43
	retorno : tipoSimple .  (76)

	.  reduce 76


state 44
	lista_parametrosP : lista_parametrosP ',' ID . tipoSimple  (80)

	FLOAT32  shift 30
	INT  shift 31
	CHAR  shift 32
	.  error

	tipoSimple  goto 53


state 45
	campo : identificadores tipo . ';'  (62)

	';'  shift 54
	.  error


state 46
	tipo : STRUCT '{' lista_campos '}' .  (69)

	.  reduce 69


state 47
	lista_campos : lista_campos campo .  (64)

	.  reduce 64


state 48
	tipo : '[' CTE_ENTERA ']' tipo .  (68)

	.  reduce 68


state 49
	programa : lista_definiciones FUNC MAIN '(' ')' '{' cuerpo '}' .  (1)

	.  reduce 1


state 50
	lista_variables : lista_variables definicion_variable .  (58)

	.  reduce 58


state 51
	lista_sentencias : lista_sentencias . sentencia  (35)
	cuerpo : lista_variables lista_sentencias .  (71)

	CTE_ENTERA  shift 55
	IF  shift 56
	CTE_CARACTER  shift 57
	ID  shift 58
	WRITE  shift 59
	CTE_REAL  shift 60
	STRUCT  shift 14
	WHILE  shift 61
	FLOAT32  shift 15
	INT  shift 16
	RETURN  shift 62
	CHAR  shift 17
	READ  shift 63
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	'}'  reduce 71

	expresion  goto 67
	tipo  goto 68
	sentencia  goto 69
	sentencia_if  goto 70
	sentencia_while  goto 71
	sentencia_write  goto 72
	sentencia_read  goto 73
	sentencia_asignacion  goto 74
	sentencia_return  goto 75
	sentencia_invocacion  goto 76
	sentencia_modificarValor  goto 77
	sentencia_modificarValorConcreto  goto 78


state 52
	definicion_funcion : FUNC ID '(' lista_parametros ')' retorno '{' . cuerpo '}'  (70)
	lista_variables : .  (57)

	.  reduce 57

	cuerpo  goto 79
	lista_variables  goto 41


state 53
	lista_parametrosP : lista_parametrosP ',' ID tipoSimple .  (80)

	.  reduce 80


state 54
	campo : identificadores tipo ';' .  (62)

	.  reduce 62


state 55
	expresion : CTE_ENTERA .  (10)

	.  reduce 10


state 56
	sentencia_if : IF . expresion '{' lista_sentencias '}'  (46)
	sentencia_if : IF . expresion '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (47)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 81
	tipo  goto 68


state 57
	expresion : CTE_CARACTER .  (12)

	.  reduce 12


state 58
	expresion : ID .  (13)
	expresion : ID . '(' lista_expresiones ')'  (33)
	sentencia_invocacion : ID . '(' lista_expresiones ')' ';'  (52)

	'('  shift 82
	DISTINTO  reduce 13
	MENOR_IGUAL  reduce 13
	MAYOR_IGUAL  reduce 13
	IGUAL_IGUAL  reduce 13
	AND  reduce 13
	OR  reduce 13
	MAS_MAS  reduce 13
	MENOS_MENOS  reduce 13
	MAS_IGUAL  reduce 13
	MENOS_IGUAL  reduce 13
	'='  reduce 13
	'>'  reduce 13
	'<'  reduce 13
	'+'  reduce 13
	'-'  reduce 13
	'*'  reduce 13
	'/'  reduce 13
	'%'  reduce 13
	'['  reduce 13
	'.'  reduce 13


state 59
	sentencia_write : WRITE . '(' lista_expresiones ')' ';'  (49)

	'('  shift 83
	.  error


state 60
	expresion : CTE_REAL .  (11)

	.  reduce 11


state 61
	sentencia_while : WHILE . expresion '{' lista_sentencias '}'  (48)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 84
	tipo  goto 68


state 62
	sentencia_return : RETURN . expresion ';'  (51)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 85
	tipo  goto 68


state 63
	sentencia_read : READ . '(' lista_expresiones ')' ';'  (50)

	'('  shift 86
	.  error


state 64
	expresion : '-' . expresion  (17)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 87
	tipo  goto 68


state 65
	expresion : '!' . expresion  (18)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 88
	tipo  goto 68


state 66
	expresion : '(' . expresion ')'  (14)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 89
	tipo  goto 68


state 67
	expresion : expresion . '.' ID  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)
	sentencia_asignacion : expresion . '=' expresion ';'  (45)
	sentencia_modificarValor : expresion . MAS_MAS ';'  (53)
	sentencia_modificarValor : expresion . MENOS_MENOS ';'  (54)
	sentencia_modificarValorConcreto : expresion . MAS_IGUAL expresion ';'  (55)
	sentencia_modificarValorConcreto : expresion . MENOS_IGUAL expresion ';'  (56)

	DISTINTO  shift 90
	MENOR_IGUAL  shift 91
	MAYOR_IGUAL  shift 92
	IGUAL_IGUAL  shift 93
	AND  shift 94
	OR  shift 95
	MAS_MAS  shift 96
	MENOS_MENOS  shift 97
	MAS_IGUAL  shift 98
	MENOS_IGUAL  shift 99
	'='  shift 100
	'>'  shift 101
	'<'  shift 102
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'['  shift 108
	'.'  shift 109
	.  error


state 68
	expresion : tipo . '(' expresion ')'  (32)

	'('  shift 110
	.  error


state 69
	lista_sentencias : lista_sentencias sentencia .  (35)

	.  reduce 35


state 70
	sentencia : sentencia_if .  (36)

	.  reduce 36


state 71
	sentencia : sentencia_while .  (37)

	.  reduce 37


state 72
	sentencia : sentencia_write .  (38)

	.  reduce 38


state 73
	sentencia : sentencia_read .  (39)

	.  reduce 39


state 74
	sentencia : sentencia_asignacion .  (40)

	.  reduce 40


state 75
	sentencia : sentencia_return .  (41)

	.  reduce 41


state 76
	sentencia : sentencia_invocacion .  (42)

	.  reduce 42


state 77
	sentencia : sentencia_modificarValor .  (43)

	.  reduce 43


state 78
	sentencia : sentencia_modificarValorConcreto .  (44)

	.  reduce 44


state 79
	definicion_funcion : FUNC ID '(' lista_parametros ')' retorno '{' cuerpo . '}'  (70)

	'}'  shift 111
	.  error


state 80
	expresion : ID .  (13)
	expresion : ID . '(' lista_expresiones ')'  (33)

	'('  shift 112
	DISTINTO  reduce 13
	MENOR_IGUAL  reduce 13
	MAYOR_IGUAL  reduce 13
	IGUAL_IGUAL  reduce 13
	AND  reduce 13
	OR  reduce 13
	MAS_MAS  reduce 13
	MENOS_MENOS  reduce 13
	MAS_IGUAL  reduce 13
	MENOS_IGUAL  reduce 13
	'='  reduce 13
	'>'  reduce 13
	'<'  reduce 13
	'+'  reduce 13
	'-'  reduce 13
	'*'  reduce 13
	'/'  reduce 13
	'%'  reduce 13
	'['  reduce 13
	']'  reduce 13
	'.'  reduce 13
	')'  reduce 13
	'{'  reduce 13
	','  reduce 13
	';'  reduce 13


state 81
	expresion : expresion . '.' ID  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)
	sentencia_if : IF expresion . '{' lista_sentencias '}'  (46)
	sentencia_if : IF expresion . '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (47)

	DISTINTO  shift 90
	MENOR_IGUAL  shift 91
	MAYOR_IGUAL  shift 92
	IGUAL_IGUAL  shift 93
	AND  shift 94
	OR  shift 95
	'>'  shift 101
	'<'  shift 102
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'['  shift 108
	'.'  shift 109
	'{'  shift 113
	.  error


state 82
	expresion : ID '(' . lista_expresiones ')'  (33)
	sentencia_invocacion : ID '(' . lista_expresiones ')' ';'  (52)
	lista_expresiones : .  (6)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	')'  reduce 6

	lista_expresiones  goto 114
	lista_expresionesP  goto 115
	expresion  goto 116
	tipo  goto 68


state 83
	sentencia_write : WRITE '(' . lista_expresiones ')' ';'  (49)
	lista_expresiones : .  (6)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	')'  reduce 6

	lista_expresiones  goto 117
	lista_expresionesP  goto 115
	expresion  goto 116
	tipo  goto 68


state 84
	expresion : expresion . '.' ID  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)
	sentencia_while : WHILE expresion . '{' lista_sentencias '}'  (48)

	DISTINTO  shift 90
	MENOR_IGUAL  shift 91
	MAYOR_IGUAL  shift 92
	IGUAL_IGUAL  shift 93
	AND  shift 94
	OR  shift 95
	'>'  shift 101
	'<'  shift 102
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'['  shift 108
	'.'  shift 109
	'{'  shift 118
	.  error


state 85
	expresion : expresion . '.' ID  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)
	sentencia_return : RETURN expresion . ';'  (51)

	DISTINTO  shift 90
	MENOR_IGUAL  shift 91
	MAYOR_IGUAL  shift 92
	IGUAL_IGUAL  shift 93
	AND  shift 94
	OR  shift 95
	'>'  shift 101
	'<'  shift 102
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'['  shift 108
	'.'  shift 109
	';'  shift 119
	.  error


state 86
	sentencia_read : READ '(' . lista_expresiones ')' ';'  (50)
	lista_expresiones : .  (6)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	')'  reduce 6

	lista_expresiones  goto 120
	lista_expresionesP  goto 115
	expresion  goto 116
	tipo  goto 68


state 87
	expresion : expresion . '.' ID  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : '-' expresion .  (17)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)

	'['  shift 108
	'.'  shift 109
	DISTINTO  reduce 17
	MENOR_IGUAL  reduce 17
	MAYOR_IGUAL  reduce 17
	IGUAL_IGUAL  reduce 17
	AND  reduce 17
	OR  reduce 17
	MAS_MAS  reduce 17
	MENOS_MENOS  reduce 17
	MAS_IGUAL  reduce 17
	MENOS_IGUAL  reduce 17
	'='  reduce 17
	'>'  reduce 17
	'<'  reduce 17
	'+'  reduce 17
	'-'  reduce 17
	'*'  reduce 17
	'/'  reduce 17
	'%'  reduce 17
	']'  reduce 17
	')'  reduce 17
	'{'  reduce 17
	','  reduce 17
	';'  reduce 17


state 88
	expresion : expresion . '.' ID  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : '!' expresion .  (18)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)

	'['  shift 108
	'.'  shift 109
	DISTINTO  reduce 18
	MENOR_IGUAL  reduce 18
	MAYOR_IGUAL  reduce 18
	IGUAL_IGUAL  reduce 18
	AND  reduce 18
	OR  reduce 18
	MAS_MAS  reduce 18
	MENOS_MENOS  reduce 18
	MAS_IGUAL  reduce 18
	MENOS_IGUAL  reduce 18
	'='  reduce 18
	'>'  reduce 18
	'<'  reduce 18
	'+'  reduce 18
	'-'  reduce 18
	'*'  reduce 18
	'/'  reduce 18
	'%'  reduce 18
	']'  reduce 18
	')'  reduce 18
	'{'  reduce 18
	','  reduce 18
	';'  reduce 18


state 89
	expresion : '(' expresion . ')'  (14)
	expresion : expresion . '.' ID  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)

	DISTINTO  shift 90
	MENOR_IGUAL  shift 91
	MAYOR_IGUAL  shift 92
	IGUAL_IGUAL  shift 93
	AND  shift 94
	OR  shift 95
	'>'  shift 101
	'<'  shift 102
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'['  shift 108
	'.'  shift 109
	')'  shift 121
	.  error


state 90
	expresion : expresion DISTINTO . expresion  (28)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 122
	tipo  goto 68


state 91
	expresion : expresion MENOR_IGUAL . expresion  (27)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 123
	tipo  goto 68


state 92
	expresion : expresion MAYOR_IGUAL . expresion  (25)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 124
	tipo  goto 68


state 93
	expresion : expresion IGUAL_IGUAL . expresion  (29)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 125
	tipo  goto 68


state 94
	expresion : expresion AND . expresion  (30)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 126
	tipo  goto 68


state 95
	expresion : expresion OR . expresion  (31)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 127
	tipo  goto 68


state 96
	sentencia_modificarValor : expresion MAS_MAS . ';'  (53)

	';'  shift 128
	.  error


state 97
	sentencia_modificarValor : expresion MENOS_MENOS . ';'  (54)

	';'  shift 129
	.  error


state 98
	sentencia_modificarValorConcreto : expresion MAS_IGUAL . expresion ';'  (55)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 130
	tipo  goto 68


state 99
	sentencia_modificarValorConcreto : expresion MENOS_IGUAL . expresion ';'  (56)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 80
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 131
	tipo  goto 68

